--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,11 +21,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up JDK 17
+    - name: Set up JDK 20
       uses: actions/setup-java@v3
       with:
-        java-version: '17'
-        distribution: 'temurin'
+        java-version: '21'
+        distribution: 'oracle'
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
